Fixed projects swiper overflow

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -40,6 +40,7 @@ a:hover {
      grid-template-columns: clamp(13px, 2.5vw, 60px) clamp(13px, 3.5vw, 100px) 1fr clamp(13px, 3.5vw, 100px) clamp(13px, 2vw, 60px);
      flex: 1;
      row-gap: min(15vh, 250px);
+     overflow-x: hidden;
 }
 
 .section-title {
